<resources>
    <string name="app_name">Ethereal Dialpad</string>

    <string name="app_desc">The expressive touch synthesizer.\nTurn up, tap in, dial out.</string>
    <string name="select_dialpad">Select a dialpad:</string>

    <string name="synth_preferences_menu">Synth preferences</string>
    <string name="more_dialpads_menu">More dialpads</string>

    <string name="no_label">(no description)</string>
    <string name="basicpad_label">Flat: A simple background panel tastefully shifts in hue.</string>
    <string name="trailpad_label">Draw: Glowing light trails follow you around the pad.</string>
    <string name="pointpad_label">Swarm: A curious cloud of energetic particles.</string>
    <string name="gridpad_label">Moonblink\'s Grid: A hue-shifting background overlaid with strings.</string>

    <string name="pref_quantizer">Pitch quantizer</string>
    <string name="pref_octaves">Octaves</string>
    <string name="pref_delay">Delay effect</string>
    <string name="pref_flange">Flange effect</string>
    <string name="pref_soft_envelope">Soft envelope</string>
    <string name="pref_soft_timbre">Soft timbre</string>
    <string name="pref_duet">Duet</string>
    <string name="pref_duet_on">pitch A vs. pitch B</string>
    <string name="pref_duet_off">pitch vs. volume</string>
    <string name="title_activity_pad">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_synth_settings">SynthSettingsActivity</string>
</resources>
