<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
            android:title="@string/pref_quantizer"
            android:key="quantizer"
            android:defaultValue="1,4,6,9,11"
            android:entries="@array/quantizer_entries"
            android:entryValues="@array/quantizer_values"/>

    <ListPreference
            android:title="@string/pref_octaves"
            android:key="octaves"
            android:defaultValue="3"
            android:entries="@array/octaves_both"
            android:entryValues="@array/octaves_both"/>

    <CheckBoxPreference
            android:title="@string/pref_delay"
            android:key="delay"
            android:defaultValue="true"/>

    <CheckBoxPreference
            android:title="@string/pref_flange"
            android:key="flange"
            android:defaultValue="false"/>

    <CheckBoxPreference
            android:title="@string/pref_soft_envelope"
            android:key="softEnvelope"
            android:defaultValue="true"/>

    <CheckBoxPreference
            android:title="@string/pref_soft_timbre"
            android:key="softTimbre"
            android:defaultValue="true"/>

    <CheckBoxPreference
            android:summaryOn="@string/pref_duet_on"
            android:summaryOff="@string/pref_duet_off"
            android:title="@string/pref_duet"
            android:key="duet"
            android:defaultValue="true"/>
</PreferenceScreen>